tests/snapshots/trace_solver__spanshot_request@17264205670665733169.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: permissive
  request: "mut ref mut x: T"
---
mut ref mut x @ p: T
// Applying rule `BindingBorrow`
mut x @ &mut p: &mut T
// Applying rule `Binding`
let mut x: &mut T = &mut p

// Final bindings (simplified):
let mut x: &mut T = &mut p;
